Update UKHOStyles; fix body styling not showing due to an error; add Popper.js to LibMan

--- a/src/Portal/Portal/wwwroot/css/site.css
+++ b/src/Portal/Portal/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-r /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
 for details on configuring this project to bundle and minify static web assets. */
 body {
     color: #333333;
@@ -168,7 +168,7 @@ table.dataTable thead tr {
 }
 /* Moving sort arrows down in line with titles */
 table.dataTable thead .sorting:before, table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:before, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:before, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:before, table.dataTable thead .sorting_desc_disabled:after {
-    bottom: 0.05em;
+    bottom: 0.2em;
 }
 
 /* General table tweaks for UKHO design */
